<resources>
    <string name="app_name" translatable="false">Contratos</string>
    <string-array name="idiomas">
        <item>Español</item>
        <item>English</item>
    </string-array>
    <string name="titulo">Cotización de Venta</string>
    <string name="datosgen">Datos Generales</string>
    <string name="titularespestaña">TITULARES/BENEFICIARIOS</string>
    <string name="titularestitulo">Titulares</string>
    <string name="nombreform">Nombre(s)</string>
    <string name="ocupacionform">Ocupación</string>
    <string name="parentescoform">Parentesco</string>
    <string name="cumpleform">Cumpleaños</string>
    <string name="agregarbot">Agregar</string>
    <string name="limpiarbot">Limpiar</string>
    <string name="borrarbot">Borrar</string>
    <string name="beneficiariostitulo">Beneficiarios</string>
    <string name="condicionesbot">Condiciones de Venta</string>
    <string name="direccionpestaña">DIRECCIÓN/TELEFONOS/EMAIL</string>
    <string name="saludobarra">Bienvenido,</string>
    <string name="apellidoform">Apellido Paterno</string>
    <string name="maternoform">Apellido Materno</string>
    <string name="fechaformato">DD/MM/AAAA</string>
    <string name="financiamiento">Financiamiento</string>
    <string name="selecciona">Seleccionar</string>
    <string name="domicilioform">Domicilio</string>
    <string name="aceptarbot">Aceptar</string>
    <string name="formatodir">Formato de Dirección</string>
    <string name="calleform">Calle *</string>
    <string name="next">No. Exterior *</string>
    <string name="nint">No. Int</string>
    <string name="CP">CP</string>
    <string name="colonia">Colonia *</string>
    <string name="municipio">Delegación o Municipio *</string>
    <string name="ciudad">Ciudad</string>
    <string name="pais">País</string>
    <string name="telefonoform">Teléfonos</string>
    <string name="casa1">🏠 Casa 1</string>
    <string name="casa2">🏠 Casa 2</string>
    <string name="oficina1">🏢 Oficina 1</string>
    <string name="oficina2">🏢 Oficina 2</string>
    <string name="celular1">📱 Celular 1</string>
    <string name="celular2">📱 Celular 2</string>
    <string name="mensajes">💬 Mensajes</string>
    <string name="nacionalidad">Nacionalidad</string>
    <string name="inventario">Inventario adquirido</string>
    <string name="tipoventa">Tipo de Venta</string>
    <string name="ctobeneficio" translatable="false">Cto Beneficio</string>
    <string name="contrato">No. Contrato</string>
    <string name="unidad">Unidad</string>
    <string name="temporada">Temporada</string>
    <string-array name="temporadas">
        <item>Seleccionar</item>
        <item>Platino</item>
        <item>Oro</item>
        <item>Plata</item>
    </string-array>
    <string name="proyecto">Proyecto</string>
    <string name="noaños">No. Años</string>
    <string name="datosventa">Datos de la Venta</string>
    <string name="resort_logo" translatable="false">Resort Logo</string>
    <string-array name="tipos_periodo">
        <item>Mensual</item>
        <item>Bimestral</item>
        <item>Trimestral</item>
        <item>Cuatrimestral</item>
        <item>Semestral</item>
        <item>Anual</item>
    </string-array>
    <string name="estado">Estado *</string>
    <string-array name="tiposOcupacion">
        <item>Seleccionar</item>
        <item>Corridos</item>
        <item>Alternos Pares</item>
        <item>Alternos Nones</item>

    </string-array>
    <string-array name="parentescos">
        <item>Contacto</item>
        <item>Hermano(a)</item>
        <item>Conyuge</item>
        <item>Empleado(a)</item>
        <item>Hijo(a)</item>
        <item>Padre</item>
        <item>Madre</item>
        <item>Primo(a)</item>
        <item>Tio(a)</item>
        <item>Socio(a)</item>
        <item>Otro</item>
        <item>Selecciona</item>
    </string-array>
    <string name="mexico">🇲🇽 México</string>
    <string name="usa">🇺🇸 USA</string>
    <string name="canada">🇨🇦 Canadá</string>
    <string name="lada">Lada</string>
    <string name="principal">Principal</string>
    <string name="otro">🌐 Otro</string>
    <string name="nocorreo">No cuenta con correo electrónico</string>
    <string name="moneda">Moneda</string>
    <string name="cambio">Tipo de Cambio</string>
    <string name="bruto">Precio Bruto</string>
    <string name="neto">Precio Neto</string>
    <string name="acuenta">Monto a Cuenta</string>
    <string name="nocontratos">No. Contratos</string>
    <string name="tipopago">Tipo de Pago</string>
    <string name="enganchetotal">Enganche Total</string>
    <string name="enganchesala">Enganche a Pagar en Sala</string>
    <string name="descuentos">Varios (desc)</string>
    <string name="enganchediferido">Enganche Diferido</string>
    <string name="saldoenganche">Saldo Enganche</string>
    <string name="montofinanciar">Monto a Financiar</string>
    <string name="pagosala">Total Pago en Sala</string>
    <string name="costomembresia">Costo Membresía</string>
    <string name="linea1">Línea 1</string>
    <string name="linea2">Línea 2</string>
    <string name="linea3">Linea 3</string>
    <string name="linea4">Línea 4</string>
    <string name="linea5">Línea 5</string>
    <string name="precioneto">Precio Neto</string>
    <string name="tablaamor">Tabla de Amortización</string>
    <string name="tipoperiodo">Tipo de Periodo</string>
    <string name="fechaprimer">Fecha Primer Pago</string>
    <string name="nopagos">No. Pagos</string>
    <string name="tasainteres">Tasa de Interés</string>
    <string name="tablacalculada">Tabla de Amortización Calculada</string>
    <string name="nueva">Nueva</string>
    <string name="año1er">Año 1er Uso</string>
    <string name="continuar">Continuar</string>
    <string name="aceptar">Aceptar</string>
    <string name="correo">Correo Electrónico</string>
    <string name="redes">Redes Sociales</string>
    <string name="usuario">Usuario</string>
    <string name="agregarredes">+ Agregar</string>
    <string name="redessocialesnav">REDES SOCIALES</string>
    <string name="guardar">Guardar</string>
    <string name="datosventatab">DATOS DE LA VENTA</string>
    <string name="varios">VARIOS</string>
    <string name="no_deseo_redes">No deseo agregar redes sociales</string>
    <string name="si">Sí</string>
    <string-array name="nacionalidades">
        <item>Selecciona Nacionalidad</item>
        <item>Mexicana</item>
        <item>Estadounidense</item>
        <item>Canadiense</item>
        <item>Alemana</item>
        <item>Argentina</item>
        <item>Australiana</item>
        <item>Austriaca</item>
        <item>Belga</item>
        <item>Boliviana</item>
        <item>Brasileña</item>
        <item>Chilena</item>
        <item>China</item>
        <item>Colombiana</item>
        <item>Costarricense</item>
        <item>Cubana</item>
        <item>Danesa</item>
        <item>Dominicana</item>
        <item>Ecuatoriana</item>
        <item>Salvadoreña</item>
        <item>Escocesa</item>
        <item>Española</item>
        <item>Francesa</item>
        <item>Guatemalteca</item>
        <item>Haitiana</item>
        <item>Hondureña</item>
        <item>Inglesa</item>
        <item>Irlandesa</item>
        <item>Italiana</item>
        <item>Japonesa</item>
        <item>Libanesa</item>
        <item>Marroquí</item>
        <item>Nicaragüense</item>
        <item>Panameña</item>
        <item>Paraguaya</item>
        <item>Peruana</item>
        <item>Portuguesa</item>
        <item>Puertorriqueña</item>
        <item>Rusa</item>
        <item>Sueca</item>
        <item>Suiza</item>
        <item>Uruguaya</item>
        <item>Venezolana</item>
        <item>Otra</item>
    </string-array>
    <string name="costocontrato">Costo de Contrato</string>
    <string name="financiado">Financiado</string>
    <string name="contado">Contado</string>
    <string name="calcular">Calcular</string>
    <string name="enviar">Enviar Contrato</string>
    <string name="fechapago">Fecha Pago</string>
    <string name="monto">Monto</string>
    <string name="saldo">Saldo</string>
    <string name="resumen">Resumen de Pagos</string>
    <string name="total">Total a Pagar</string>
    <string name="pagosde">pagos de</string>
    <string name="interes">Interés</string>
    <string name="capacumulado">Cap. Acumulado</string>
    <string-array name="Estados">
        <item>Seleccionar</item>
        <item>Aguascalientes</item>
        <item>Baja California</item>
        <item>Baja California Sur</item>
        <item>Campeche</item>
        <item>Chiapas</item>
        <item>Chihuahua</item>
        <item>Ciudad de México</item>
        <item>Coahuila</item>
        <item>Colima</item>
        <item>Durango</item>
        <item>Estado de México</item>
        <item>Guanajuato</item>
        <item>Guerrero</item>
        <item>Hidalgo</item>
        <item>Jalisco</item>
        <item>Michoacán</item>
        <item>Morelos</item>
        <item>Nayarit</item>
        <item>Nuevo León</item>
        <item>Oaxaca</item>
        <item>Puebla</item>
        <item>Queretaro</item>
        <item>Quintana Roo</item>
        <item>San Luis Potosí</item>
        <item>Sinaloa</item>
        <item>Sonora</item>
        <item>Tabasco</item>
        <item>Tamaulipas</item>
        <item>Tlaxcala</item>
        <item>Veracruz</item>
        <item>Yucatán</item>
        <item>Zacatecas</item>

    </string-array>
    <string-array name="EstadosUSA">
        <item>Select</item>
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CZ</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>DC</item>
        <item>FL</item>
        <item>GA</item>
        <item>GU</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>PR</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VI</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>
    <string-array name="Provincias">
        <item>Select</item>
        <item>AB</item>
        <item>BC</item>
        <item>MB</item>
        <item>NB</item>
        <item>NL</item>
        <item>NS</item>
        <item>ON</item>
        <item>PE</item>
        <item>QC</item>
        <item>SK</item>
        <item>NT</item>
        <item>NU</item>
        <item>YT</item>

    </string-array>
    <string name="ultimo">1 pago de</string>
    <string name="tipoocupacion">Tipo Ocupación</string>
    <string name="corridos">Corridos</string>
    <string name="alternospares">Alternos Pares</string>
    <string name="alternosnones">Alternos nones</string>
    <string name="mensualbot">Mensual</string>
    <string name="abiertobot">Abierto</string>
    <string name="firma">Añadir Firma</string>
    <string name="ver">Ver</string>
    <string name="firmas">Firma</string>
    <string name="financiamiento2">Financiamiento 2</string>
    <string name="celular3">📱 Celular 3</string>
    <string name="ine">INE</string>
    <string name="pasaporte">Pasaporte</string>
    <string name="tipoid">Tipo de Identificación</string>
</resources>