<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linea1"
        android:fontFamily="serif"
        android:textSize="15sp"
        android:textColor="@color/pacificagris"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/editLinea1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="15sp"
        android:background="@drawable/bg_input"
        android:paddingStart="12dp"
        android:layout_marginBottom="12dp"

        android:inputType="textCapWords" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linea2"
        android:fontFamily="serif"
        android:textSize="15sp"
        android:textColor="@color/pacificagris"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/editLinea2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="15sp"
        android:background="@drawable/bg_input"
        android:paddingStart="12dp"
        android:layout_marginBottom="12dp"

        android:inputType="textCapWords"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linea3"
        android:fontFamily="serif"
        android:textSize="15sp"
        android:textColor="@color/pacificagris"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/editLinea3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="15sp"
        android:background="@drawable/bg_input"
        android:paddingStart="12dp"
        android:layout_marginBottom="12dp"

        android:inputType="textCapWords" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linea4"
        android:fontFamily="serif"
        android:textSize="15sp"
        android:textColor="@color/pacificagris"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/editLinea4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="15sp"
        android:background="@drawable/bg_input"
        android:paddingStart="12dp"
        android:layout_marginBottom="12dp"

        android:inputType="textCapWords" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linea5"
        android:fontFamily="serif"
        android:textSize="15sp"
        android:textColor="@color/pacificagris"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/edit5"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="15sp"
        android:background="@drawable/bg_input"
        android:paddingStart="12dp"
        android:layout_marginBottom="12dp"

        android:inputType="textCapWords"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pais"
        android:fontFamily="serif"
        android:textSize="15sp"
        android:textColor="@color/pacificagris"
        android:textStyle="bold" />
    <EditText
        android:id="@+id/editPaisOtro"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="15sp"
        android:background="@drawable/bg_input"
        android:paddingStart="12dp"

        android:inputType="textCapWords" />

</LinearLayout>