<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/pacificagris">


        <!-- HEADER -->

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/pacificaazul">


            <ImageButton

                android:id="@+id/btnRegresa"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/pacificaazul"
                android:padding="15dp"
                app:srcCompat="@drawable/ic_regresar_firma"
                app:tint="@color/white"/>



            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:gravity="center"
                android:text="@string/tipoid"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="serif"
                android:background="@color/pacificaazul"/>


        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/btnIneModal"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:background="@color/pacificagris"
                android:src="@drawable/ic_ine2"

                ></ImageButton>


            <ImageButton
                android:id="@+id/btnPasaporteModal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/pacificagris"
                android:src="@drawable/ic_pasaporte"

                ></ImageButton>


        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


           <TextView
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:text="@string/ine"
               android:gravity="center"
               android:textColor="@color/white"
               android:fontFamily="serif"
               android:textSize="15sp"></TextView>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/pasaporte"
                android:gravity="center"
                android:textColor="@color/white"
                android:fontFamily="serif"
                android:textSize="15sp"></TextView>

        </LinearLayout>


        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>